Fixed display of the gallery(z-index)

--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,7 @@ header {
   border-radius: 25px;
   -webkit-transition: 0.3s;
   transition: 0.3s;
+  z-index: 1;
 }
 
 .checkbox:checked ~ .slider {
@@ -313,6 +314,7 @@ form input {
   border-radius: 50%;
   font: bold 20px monospace;
   transition: opacity 0.5s, transform 0.5s;
+  z-index: 99;
 }
 #scroll-btn.show {
   opacity: 1;
